--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -380,7 +380,7 @@
   pages = {5601--5604},
   author = {Carolina Lundin and Lukas Käll and Scott A. Kreher and Katja Kapp and Erik L. Sonnhammer and John R. Carlson and Gunnar von Heijne and IngMarie Nilsson},
   title = {{Membrane topology of the Drosophila {OR}83b odorant receptor}},
-  journal = {{{{{{{{{{{{{{{{{{{{{{{{{{{{{FEBS} Letters}}}}}}}}}}}}}}}}}}}}}}}}}}}}},
+  journal = {{{{{{{{{{{{{{{{{{{{{{{{{{{{{{FEBS} Letters}}}}}}}}}}}}}}}}}}}}}}}}}}}}}},
 }
 
 
@@ -632,7 +632,7 @@
   author = {Andreas Nolte and Nico W. Funk and Latha Mukunda and Petra Gawalek and Achim Werckenthin and Bill S. Hansson and Dieter Wicher and Monika Stengl},
   editor = {Alan Nighorn},
   title = {{In situ Tip-Recordings Found No Evidence for an Orco-Based Ionotropic Mechanism of Pheromone-Transduction in Manduca sexta}},
-  journal = {{{{{{{{{{{{PLoS} {ONE}}}}}}}}}}}}},
+  journal = {{{{{{{{{{{{{PLoS} {ONE}}}}}}}}}}}}}},
 }
 
 
@@ -700,7 +700,7 @@
   author = {Merid N. Getahun and Shannon B. Olsson and Sofia Lavista-Llanos and Bill S. Hansson and Dieter Wicher},
   editor = {Richard David Newcomb},
   title = {{Insect Odorant Response Sensitivity Is Tuned by Metabotropically Autoregulated Olfactory Receptors}},
-  journal = {{{{{{PLoS} {ONE}}}}}}},
+  journal = {{{{{{{PLoS} {ONE}}}}}}}},
 }
 
 
@@ -756,4 +756,20 @@
   author = {Lorena Halty-deLeon and Fabio Miazzi and Sabine Kaltofen and Bill S. Hansson and Dieter Wicher},
   title = {{The mouse receptor transporting protein {RTP}1S and the fly {SNMP}1 support the functional expression of the Drosophila odorant coreceptor Orco in mammalian culture cells}},
   journal = {Journal of Neuroscience Methods},
+}
+
+
+@article{Nakagawa_2012,
+  doi = {10.1371/journal.pone.0032372},
+  url = {http://dx.doi.org/10.1371/journal.pone.0032372},
+  year = {2012},
+  month = {mar},
+  publisher = {Public Library of Science ({PLoS})},
+  volume = {7},
+  number = {3},
+  pages = {e32372},
+  author = {Tatsuro Nakagawa and Maurizio Pellegrino and Koji Sato and Leslie B. Vosshall and Kazushige Touhara},
+  editor = {Daniel Doucet},
+  title = {{Amino Acid Residues Contributing to Function of the Heteromeric Insect Olfactory Receptor Complex}},
+  journal = {PLoS} {ONE}},
 }
