--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -380,7 +380,7 @@
   pages = {5601--5604},
   author = {Carolina Lundin and Lukas Käll and Scott A. Kreher and Katja Kapp and Erik L. Sonnhammer and John R. Carlson and Gunnar von Heijne and IngMarie Nilsson},
   title = {{Membrane topology of the Drosophila {OR}83b odorant receptor}},
-  journal = {{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{FEBS} Letters}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}},
+  journal = {{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{FEBS} Letters}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}},
 }
 
 
@@ -632,7 +632,7 @@
   author = {Andreas Nolte and Nico W. Funk and Latha Mukunda and Petra Gawalek and Achim Werckenthin and Bill S. Hansson and Dieter Wicher and Monika Stengl},
   editor = {Alan Nighorn},
   title = {{In situ Tip-Recordings Found No Evidence for an Orco-Based Ionotropic Mechanism of Pheromone-Transduction in Manduca sexta}},
-  journal = {{{{{{{{{{{{{{{PLoS} {ONE}}}}}}}}}}}}}}}},
+  journal = {{{{{{{{{{{{{{{{PLoS} {ONE}}}}}}}}}}}}}}}}},
 }
 
 
@@ -700,7 +700,7 @@
   author = {Merid N. Getahun and Shannon B. Olsson and Sofia Lavista-Llanos and Bill S. Hansson and Dieter Wicher},
   editor = {Richard David Newcomb},
   title = {{Insect Odorant Response Sensitivity Is Tuned by Metabotropically Autoregulated Olfactory Receptors}},
-  journal = {{{{{{{{{PLoS} {ONE}}}}}}}}}},
+  journal = {{{{{{{{{{PLoS} {ONE}}}}}}}}}}},
 }
 
 
@@ -771,7 +771,7 @@
   author = {Tatsuro Nakagawa and Maurizio Pellegrino and Koji Sato and Leslie B. Vosshall and Kazushige Touhara},
   editor = {Daniel Doucet},
   title = {{Amino Acid Residues Contributing to Function of the Heteromeric Insect Olfactory Receptor Complex}},
-  journal = {{{PLoS} {ONE}}}},
+  journal = {{{{PLoS} {ONE}}}}},
 }
 
 
@@ -802,4 +802,19 @@
   author = {Jennifer S. Ignatious Raja and Natalya Katanayeva and Vladimir L. Katanaev and C. Giovanni Galizia},
   title = {{Role of G o/i subgroup of G proteins in olfactory signaling of Drosophila melanogaster}},
   journal = {European Journal of Neuroscience},
+}
+
+
+@article{Nichols_2011,
+  doi = {10.1093/chemse/bjr053},
+  url = {http://dx.doi.org/10.1093/chemse/bjr053},
+  year = {2011},
+  month = {jun},
+  publisher = {Oxford University Press ({OUP})},
+  volume = {36},
+  number = {9},
+  pages = {781--790},
+  author = {A. S. Nichols and S. Chen and C. W. Luetje},
+  title = {{Subunit Contributions to Insect Olfactory Receptor Function: Channel Block and Odorant Recognition}},
+  journal = {Chemical Senses},
 }
