--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -380,7 +380,7 @@
   pages = {5601--5604},
   author = {Carolina Lundin and Lukas Käll and Scott A. Kreher and Katja Kapp and Erik L. Sonnhammer and John R. Carlson and Gunnar von Heijne and IngMarie Nilsson},
   title = {{Membrane topology of the Drosophila {OR}83b odorant receptor}},
-  journal = {{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{FEBS} Letters}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}},
+  journal = {{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{FEBS} Letters}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}},
 }
 
 
@@ -632,7 +632,7 @@
   author = {Andreas Nolte and Nico W. Funk and Latha Mukunda and Petra Gawalek and Achim Werckenthin and Bill S. Hansson and Dieter Wicher and Monika Stengl},
   editor = {Alan Nighorn},
   title = {{In situ Tip-Recordings Found No Evidence for an Orco-Based Ionotropic Mechanism of Pheromone-Transduction in Manduca sexta}},
-  journal = {{{{{{{{{{{{{{{{{PLoS} {ONE}}}}}}}}}}}}}}}}}},
+  journal = {{{{{{{{{{{{{{{{{{PLoS} {ONE}}}}}}}}}}}}}}}}}}},
 }
 
 
@@ -700,7 +700,7 @@
   author = {Merid N. Getahun and Shannon B. Olsson and Sofia Lavista-Llanos and Bill S. Hansson and Dieter Wicher},
   editor = {Richard David Newcomb},
   title = {{Insect Odorant Response Sensitivity Is Tuned by Metabotropically Autoregulated Olfactory Receptors}},
-  journal = {{{{{{{{{{{PLoS} {ONE}}}}}}}}}}}},
+  journal = {{{{{{{{{{{{PLoS} {ONE}}}}}}}}}}}}},
 }
 
 
@@ -771,7 +771,7 @@
   author = {Tatsuro Nakagawa and Maurizio Pellegrino and Koji Sato and Leslie B. Vosshall and Kazushige Touhara},
   editor = {Daniel Doucet},
   title = {{Amino Acid Residues Contributing to Function of the Heteromeric Insect Olfactory Receptor Complex}},
-  journal = {{{{{PLoS} {ONE}}}}}},
+  journal = {{{{{{PLoS} {ONE}}}}}}},
 }
 
 
@@ -832,4 +832,20 @@
   author = {PingXi Xu and Rachel Atkinson and David N.M. Jones and Dean P. Smith},
   title = {{Drosophila {OBP} {LUSH} Is Required for Activity of Pheromone-Sensitive Neurons}},
   journal = {Neuron},
+}
+
+
+@article{Li_2014,
+  doi = {10.1371/journal.pgen.1004600},
+  url = {http://dx.doi.org/10.1371/journal.pgen.1004600},
+  year = {2014},
+  month = {sep},
+  publisher = {Public Library of Science ({PLoS})},
+  volume = {10},
+  number = {9},
+  pages = {e1004600},
+  author = {Zhengzheng Li and Jinfei D. Ni and Jia Huang and Craig Montell},
+  editor = {Gregory P. Copenhaver},
+  title = {{Requirement for Drosophila {SNMP}1 for Rapid Activation and Termination of Pheromone-Induced Activity}},
+  journal = {PLoS} Genetics},
 }
