--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -380,7 +380,7 @@
   pages = {5601--5604},
   author = {Carolina Lundin and Lukas Käll and Scott A. Kreher and Katja Kapp and Erik L. Sonnhammer and John R. Carlson and Gunnar von Heijne and IngMarie Nilsson},
   title = {{Membrane topology of the Drosophila {OR}83b odorant receptor}},
-  journal = {{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{FEBS} Letters}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}},
+  journal = {{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{FEBS} Letters}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}},
 }
 
 
@@ -632,7 +632,7 @@
   author = {Andreas Nolte and Nico W. Funk and Latha Mukunda and Petra Gawalek and Achim Werckenthin and Bill S. Hansson and Dieter Wicher and Monika Stengl},
   editor = {Alan Nighorn},
   title = {{In situ Tip-Recordings Found No Evidence for an Orco-Based Ionotropic Mechanism of Pheromone-Transduction in Manduca sexta}},
-  journal = {{{{{{{{{{{{{{{{{{PLoS} {ONE}}}}}}}}}}}}}}}}}}},
+  journal = {{{{{{{{{{{{{{{{{{{PLoS} {ONE}}}}}}}}}}}}}}}}}}}},
 }
 
 
@@ -700,7 +700,7 @@
   author = {Merid N. Getahun and Shannon B. Olsson and Sofia Lavista-Llanos and Bill S. Hansson and Dieter Wicher},
   editor = {Richard David Newcomb},
   title = {{Insect Odorant Response Sensitivity Is Tuned by Metabotropically Autoregulated Olfactory Receptors}},
-  journal = {{{{{{{{{{{{PLoS} {ONE}}}}}}}}}}}}},
+  journal = {{{{{{{{{{{{{PLoS} {ONE}}}}}}}}}}}}}},
 }
 
 
@@ -771,7 +771,7 @@
   author = {Tatsuro Nakagawa and Maurizio Pellegrino and Koji Sato and Leslie B. Vosshall and Kazushige Touhara},
   editor = {Daniel Doucet},
   title = {{Amino Acid Residues Contributing to Function of the Heteromeric Insect Olfactory Receptor Complex}},
-  journal = {{{{{{PLoS} {ONE}}}}}}},
+  journal = {{{{{{{PLoS} {ONE}}}}}}}},
 }
 
 
@@ -847,5 +847,20 @@
   author = {Zhengzheng Li and Jinfei D. Ni and Jia Huang and Craig Montell},
   editor = {Gregory P. Copenhaver},
   title = {{Requirement for Drosophila {SNMP}1 for Rapid Activation and Termination of Pheromone-Induced Activity}},
-  journal = {PLoS} Genetics},
+  journal = {{PLoS} Genetics}},
+}
+
+
+@article{Ha_2014,
+  doi = {10.1073/pnas.1401938111},
+  url = {http://dx.doi.org/10.1073/pnas.1401938111},
+  year = {2014},
+  month = {may},
+  publisher = {Proceedings of the National Academy of Sciences},
+  volume = {111},
+  number = {21},
+  pages = {7831--7836},
+  author = {T. S. Ha and R. Xia and H. Zhang and X. Jin and D. P. Smith},
+  title = {{Lipid flippase modulates olfactory receptor expression and odorant sensitivity in Drosophila}},
+  journal = {Proceedings of the National Academy of Sciences},
 }
