--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -380,7 +380,7 @@
   pages = {5601--5604},
   author = {Carolina Lundin and Lukas Käll and Scott A. Kreher and Katja Kapp and Erik L. Sonnhammer and John R. Carlson and Gunnar von Heijne and IngMarie Nilsson},
   title = {{Membrane topology of the Drosophila {OR}83b odorant receptor}},
-  journal = {{{{{{{{{{{{FEBS} Letters}}}}}}}}}}}},
+  journal = {{{{{{{{{{{{{FEBS} Letters}}}}}}}}}}}}},
 }
 
 
@@ -632,7 +632,7 @@
   author = {Andreas Nolte and Nico W. Funk and Latha Mukunda and Petra Gawalek and Achim Werckenthin and Bill S. Hansson and Dieter Wicher and Monika Stengl},
   editor = {Alan Nighorn},
   title = {{In situ Tip-Recordings Found No Evidence for an Orco-Based Ionotropic Mechanism of Pheromone-Transduction in Manduca sexta}},
-  journal = {{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{PLoS} {ONE}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}},
+  journal = {{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{{PLoS} {ONE}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}},
 }
 
 
@@ -700,7 +700,7 @@
   author = {Merid N. Getahun and Shannon B. Olsson and Sofia Lavista-Llanos and Bill S. Hansson and Dieter Wicher},
   editor = {Richard David Newcomb},
   title = {{Insect Odorant Response Sensitivity Is Tuned by Metabotropically Autoregulated Olfactory Receptors}},
-  journal = {{{{{{{{{{{{{{{{{{{{{{{{{{{PLoS} {ONE}}}}}}}}}}}}}}}}}}}}}}}}}}}},
+  journal = {{{{{{{{{{{{{{{{{{{{{{{{{{{{PLoS} {ONE}}}}}}}}}}}}}}}}}}}}}}}}}}}}},
 }
 
 
@@ -771,7 +771,7 @@
   author = {Tatsuro Nakagawa and Maurizio Pellegrino and Koji Sato and Leslie B. Vosshall and Kazushige Touhara},
   editor = {Daniel Doucet},
   title = {{Amino Acid Residues Contributing to Function of the Heteromeric Insect Olfactory Receptor Complex}},
-  journal = {{{{{{{{{{{{{{{{{{{{{PLoS} {ONE}}}}}}}}}}}}}}}}}}}}}},
+  journal = {{{{{{{{{{{{{{{{{{{{{{PLoS} {ONE}}}}}}}}}}}}}}}}}}}}}}},
 }
 
 
@@ -847,7 +847,7 @@
   author = {Zhengzheng Li and Jinfei D. Ni and Jia Huang and Craig Montell},
   editor = {Gregory P. Copenhaver},
   title = {{Requirement for Drosophila {SNMP}1 for Rapid Activation and Termination of Pheromone-Induced Activity}},
-  journal = {{{{{{{{{{{{{{{{PLoS} Genetics}}}}}}}}}}}}}}}},
+  journal = {{{{{{{{{{{{{{{{{PLoS} Genetics}}}}}}}}}}}}}}}}},
 }
 
 
@@ -878,7 +878,7 @@
   author = {Yu-Chi Liu and Michelle W. Pearce and Takahiro Honda and Travis K. Johnson and Sandhya Charlu and Kavita R. Sharma and Mays Imad and Richard E. Burke and Konrad E. Zinsmaier and Anandasankar Ray and Anupama Dahanukar and Marien de Bruyne and Coral G. Warr},
   editor = {Robert R. H. Anholt},
   title = {{The Drosophila melanogaster Phospholipid Flippase {dATP}8B Is Required for Odorant Receptor Function}},
-  journal = {{{{{{{{{{{{{{PLoS} Genetics}}}}}}}}}}}}}},
+  journal = {{{{{{{{{{{{{{{PLoS} Genetics}}}}}}}}}}}}}}},
 }
 
 
@@ -909,7 +909,7 @@
   author = {Shadi Jafari and Liza Alkhori and Alexander Schleiffer and Anna Brochtrup and Thomas Hummel and Mattias Alenius},
   editor = {Leslie B. Vosshall},
   title = {{Combinatorial Activation and Repression by Seven Transcription Factors Specify Drosophila Odorant Receptor Expression}},
-  journal = {{{{{{{{{PLoS} Biology}}}}}}}}},
+  journal = {{{{{{{{{{PLoS} Biology}}}}}}}}}},
 }
 
 
@@ -1029,4 +1029,19 @@
   author = {Catherine Dostert and Emmanuelle Jouanguy and Phil Irving and Laurent Troxler and Delphine Galiana-Arnoux and Charles Hetru and Jules A Hoffmann and Jean-Luc Imler},
   title = {{The Jak-{STAT} signaling pathway is required but not sufficient for the antiviral response of drosophila}},
   journal = {Nature Immunology},
+}
+
+
+@article{Stensmyr_2012,
+  doi = {10.1016/j.cell.2012.09.046},
+  url = {http://dx.doi.org/10.1016/j.cell.2012.09.046},
+  year = {2012},
+  month = {dec},
+  publisher = {Elsevier {BV}},
+  volume = {151},
+  number = {6},
+  pages = {1345--1357},
+  author = {Marcus~C. Stensmyr and Hany~K.M. Dweck and Abu Farhan and Irene Ibba and Antonia Strutz and Latha Mukunda and Jeanine Linz and Veit Grabe and Kathrin Steck and Sofia Lavista-Llanos and Dieter Wicher and Silke Sachse and Markus Knaden and Paul~G. Becher and Yoichi Seki and Bill~S. Hansson},
+  title = {{A Conserved Dedicated Olfactory Circuit for Detecting Harmful Microbes in Drosophila}},
+  journal = {Cell},
 }
