--- a/figures/Figure2sample/caption.tex
+++ b/figures/Figure2sample/caption.tex
@@ -1,1 +1,1 @@
-Figure 2. (sample) Selected immunoprecipitation-western blotting 
+Figure 2. (This is a sample from a similar IP-MS paper about ATPase interactome) Selected immunoprecipitation-western blotting 
