--- a/figures/Figure3(2)/caption.tex
+++ b/figures/Figure3(2)/caption.tex
@@ -1,1 +1,1 @@
-Figure3. Changes in the odor-evoked activities of OSNs upon RNAi of each protein
+Figure3. Changes in the odor-evoked activities upon RNAi of each protein in vivo
