--- a/figures/Figure1real/caption.tex
+++ b/figures/Figure1real/caption.tex
@@ -1,1 +1,1 @@
-Figure 1. Tissue enrichment, protein solubilization, and immunoprecipitation. Western blots against EGFP and GFP tags. (A) Comparison of EGFP::Orco in equal amounts of total protein extracted from different body parts. All samples were solubilized by 4% SDS. 50 ug of total proteins for each. (B) Solubility of of EGFP::Orco in various laboratory detergents. All samples were solubilized by buffers containing 1% detergent. 30 ug of total proteins for each. (C) Other EGFP-tagged antennal 7TM proteins detected the same way as EGFP::Orco and myr::GFP. All samples were solubilized by 1% DDM. 50 ug of total proteins for each. (D) Comparison of IP efficiency. 1% input, 1% non-bound, and 5% IP product.
+Figure 1. Tissue enrichment, protein solubilization, and immunoprecipitation. Western blots against EGFP and GFP tags. (A) Comparison of EGFP::Orco in equal amounts of total protein extracted from different body parts. All samples were solubilized by 4\% SDS. 50 ug of total proteins for each. (B) Solubility of of EGFP::Orco in various laboratory detergents. All samples were solubilized by buffers containing 1\% detergent. 30 ug of total proteins for each. (C) Other EGFP-tagged antennal 7TM proteins detected the same way as EGFP::Orco and myr::GFP. All samples were solubilized by 1\% DDM. 50 ug of total proteins for each. (D) Comparison of IP efficiency. 1\% input, 1\% non-bound, and 5\% IP product.
