--- a/figures/Figure3(2)/caption.tex
+++ b/figures/Figure3(2)/caption.tex
@@ -1,1 +1,1 @@
-Figure3. Changes in the odor-evoked activities upon RNAi of each protein in vivo
+Figure 3. Proteins that caused changes on the odor-evoked activities upon RNAi. (A) Eight out of the 29 tested proteins showed decreased odor-evoked responses. (B) Representative spike patterns of Rab5-RNAi recordings.
