--- a/figures/Figure4(2)1/caption.tex
+++ b/figures/Figure4(2)1/caption.tex
@@ -1,1 +1,1 @@
-Figure 4. Proteins causing decreased spontaneous activities upon RNAi in vivo
+Figure 4. Decreased spontaneous activity upon RNAi of vir-1 and Rab5. (A) Representative spike patterns of vir-1 and Rab5 recordings. (B) Spike frequencies in the dotted boxes shown in (A) were quantified.
